# pygeometry-sandbox

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: cvt_1.ipynb  cvt_1a.ipynb  cvt_1b.ipynb  cvt_1c.ipynb  cvt_2a.ipynb  cvt_utils.py  plot_utils.py  pycdt.ipynb  pytriwild.ipynb  utils.py
