[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygeometry-sandbox"
version = "0.1.0"
description = "Python bindings for a variety of geometry processing libraries"
dependencies = [
    "matplotlib>=3.10.6",
    "wildmeshing @ git+https://github.com/wildmeshing/wildmeshing-python.git@0.4"
]

[project.optional-dependencies]
dev = []
